syntax = "proto3";

option csharp_namespace = "GrpcClientpost";

import "google/protobuf/timestamp.proto";

package post;


service Post {

    rpc CreatePost (PostRequestGrpc) returns (PostResponseGrpc);
    rpc DeletePost (DeletePostRequestGrpc) returns (StatusResponse);
    rpc UpdatePost (PostRequestGrpc) returns (StatusResponse);
    rpc GetPosts (GetPostRequestGrpc) returns (PostsResponseGrpc);
}


message PostRequestGrpc {
    string Title = 1;
    string Description = 2;
}
message DeletePostRequestGrpc {
    string id = 1;
}
message GetPostRequestGrpc {
    string Query = 1;
    int32 Pagesize = 2;
    int32 Pagenum = 3;
}
message PostsResponseGrpc {
    repeated PostResponseGrpc response_dto = 1;
}
message PostResponseGrpc {
    string Userid = 1;
    string Title = 2;
    string Description = 3;
    google.protobuf.Timestamp  Date  = 4;
}
message StatusResponse {
    bool succes = 1;
}
